--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-streamlit==1.33.0
-selenium==4.11.2
-pillow==10.4.0
-playwright
-requests
-websocket-client
-undetected-chromedriver
+flask==2.3.3
+requests==2.32.3
+instagrapi==1.19.5
+gunicorn==21.2.0
+python-dotenv==1.0.0
+pillow==9.5.0
+pytest==7.4.0
+black==23.9.0
