--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,8 @@
 services:
   - type: web
-    name: fb-msg-sender
+    name: flask-render-app
     env: python
-    buildCommand: pip install -r requirements.txt
-    startCommand: streamlit run app.py --server.port 10000 --server.address 0.0.0.0
+    buildCommand: "pip install -r requirements.txt"
+    startCommand: "python app.py"
+    plan: free
     
